--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
     "eslint": "^7.6.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "lerna": "^3.22.1",
     "prettier": "^2.0.5",
     "typescript": "^3.9.7"
