--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,7 +6,10 @@
   "author": "f0reachARR <f0reach@f0reach.me>",
   "license": "MIT",
   "dependencies": {
+    "@elastic/elasticsearch": "^7.9.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "graphql": "^15.3.0"
+    "graphql": "^15.3.0",
+    "inversify": "^5.0.1"
   }
 }
