--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,9 +7,15 @@
   "license": "MIT",
   "dependencies": {
     "@elastic/elasticsearch": "^7.9.0",
+    "apollo-server-express": "^2.17.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.3.0",
-    "inversify": "^5.0.1"
+    "inversify": "^5.0.1",
+    "kit-timetable-schema": "^1.0.0",
+    "reflect-metadata": "^0.1.13"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.8"
   }
 }
