--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,6 +5,9 @@
   "repository": "https://github.com/f0reachARR/kit-timetable",
   "author": "f0reachARR <f0reach@f0reach.me>",
   "license": "MIT",
+  "scripts": {
+    "build:codegen": "gql-gen"
+  },
   "dependencies": {
     "@elastic/elasticsearch": "^7.9.0",
     "apollo-server-express": "^2.17.0",
@@ -16,6 +19,10 @@
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
-    "@types/express": "^4.17.8"
+    "@graphql-codegen/cli": "^1.17.8",
+    "@graphql-codegen/typescript": "1.13.0",
+    "@graphql-codegen/typescript-resolvers": "1.13.0",
+    "@types/express": "^4.17.8",
+    "typescript": "^3.9.7"
   }
 }
