--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,13 +1,15 @@
 {
   "name": "kit-timetable-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./dist/app.js",
   "repository": "https://github.com/f0reachARR/kit-timetable",
   "author": "f0reachARR <f0reach@f0reach.me>",
   "license": "MIT",
   "scripts": {
     "build:codegen": "gql-gen",
-    "build:tsc": "tsc -p ."
+    "build:tsc": "tsc -p .",
+    "build": "run-s build:*",
+    "start": "node ./dist/app.js"
   },
   "dependencies": {
     "@elastic/elasticsearch": "^7.9.0",
@@ -24,6 +26,7 @@
     "@graphql-codegen/typescript": "1.13.0",
     "@graphql-codegen/typescript-resolvers": "1.13.0",
     "@types/express": "^4.17.8",
+    "npm-run-all": "^4.1.5",
     "typescript": "^3.9.7"
   }
 }
