--- a/lerna.json
+++ b/lerna.json
@@ -4,5 +4,10 @@
   ],
   "version": "0.0.0",
   "npmClient": "yarn",
-  "useWorkspaces": true
+  "useWorkspaces": true,
+  "command": {
+    "exec": {
+      "stream": true
+    }
+  }
 }
