--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "experimentalDecorators": true,
     "removeComments": false,
     "pretty": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "esModuleInterop": true
   }
 }
