--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -5,5 +5,19 @@
   "repository": "https://github.com/f0reachARR/kit-timetable",
   "author": "f0reachARR <f0reach@f0reach.me>",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "scripts": {
+    "start": "parcel serve ./src/index.html",
+    "build": "parcel build ./src/index.html"
+  },
+  "engines": {
+    "browsers": "> 0.25%"
+  },
+  "devDependencies": {
+    "@parcel/validator-typescript": "^2.0.0-beta.1",
+    "@types/react-dom": "^16.9.8",
+    "parcel": "^2.0.0-beta.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  }
 }
