--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -16,11 +16,16 @@
   "devDependencies": {
     "@blueprintjs/core": "^3.31.0",
     "@blueprintjs/icons": "^3.20.1",
+    "@parcel/transformer-postcss": "^2.0.0-alpha.3",
     "@parcel/validator-typescript": "^2.0.0-beta.1",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
     "clsx": "^1.1.1",
     "parcel": "^2.0.0-beta.1",
+    "postcss-import": "^12.0.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
+    "tailwindcss": "^1.8.8"
   }
 }
