--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -15,16 +15,19 @@
     "browsers": "> 0.25%"
   },
   "devDependencies": {
+    "@apollo/client": "^3.1.5",
     "@blueprintjs/core": "^3.31.0",
     "@blueprintjs/icons": "^3.20.1",
     "@graphql-codegen/cli": "^1.17.8",
     "@graphql-codegen/typescript": "1.13.0",
     "@graphql-codegen/typescript-operations": "1.13.0",
+    "@graphql-codegen/typescript-react-apollo": "2.0.6",
     "@parcel/transformer-postcss": "^2.0.0-alpha.3",
     "@parcel/validator-typescript": "^2.0.0-beta.1",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
     "clsx": "^1.1.1",
+    "graphql": "^15.3.0",
     "parcel": "^2.0.0-beta.1",
     "postcss-import": "^12.0.1",
     "react": "^16.13.1",
