--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "sourceMap": true,
     "lib": [
       "es7",
-      "esnext.asynciterable"
+      "esnext.asynciterable",
+      "DOM"
     ],
     "moduleResolution": "node",
     "declaration": true,
