--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -18,6 +18,7 @@
     "@apollo/client": "^3.1.5",
     "@blueprintjs/core": "^3.31.0",
     "@blueprintjs/icons": "^3.20.1",
+    "@blueprintjs/select": "^3.13.7",
     "@graphql-codegen/cli": "^1.17.8",
     "@graphql-codegen/typescript": "1.13.0",
     "@graphql-codegen/typescript-operations": "1.13.0",
