--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -33,6 +33,7 @@
     "postcss-import": "^12.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-intersection-observer": "^8.28.5",
     "react-router-dom": "^5.2.0",
     "tailwindcss": "^1.8.8",
     "use-debounce": "^4.0.0"
