--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "graphql": "^15.3.0",
     "inversify": "^5.0.1",
+    "kit-timetable-client": "^1.0.0",
     "kit-timetable-schema": "^1.0.0",
     "reflect-metadata": "^0.1.13"
   },
