--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,16 +1,26 @@
 {
-  "name": "kit-timetable-client",
+  "name": "@f0reacharr/kit-timetable-client",
   "version": "1.0.0",
   "main": "dist/index.html",
-  "repository": "https://github.com/f0reachARR/kit-timetable",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/f0reachARR/kit-timetable.git",
+    "directory": "packages/client"
+  },
   "author": "f0reachARR <f0reach@f0reach.me>",
   "license": "MIT",
-  "private": true,
   "scripts": {
     "start": "parcel serve ./src/index.html",
     "build:codegen": "gql-gen",
     "build:parcel": "parcel build ./src/index.html",
     "build": "run-s build:*"
+  },
+  "files": [
+    "./dist",
+    "package.json"
+  ],
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
   },
   "engines": {
     "browsers": "> 0.25%"
@@ -41,5 +51,8 @@
     "react-router-dom": "^5.2.0",
     "tailwindcss": "^1.8.8",
     "use-debounce": "^4.0.0"
+  },
+  "dependencies": {
+    "@f0reacharr/kit-timetable-schema": "^1.0.0"
   }
 }
