--- a/lerna.json
+++ b/lerna.json
@@ -8,6 +8,9 @@
   "command": {
     "exec": {
       "stream": true
+    },
+    "publish": {
+      "registry": "https://npm.pkg.github.com"
     }
   }
 }
