Fix npmrc for docker

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,7 +6,7 @@ ARG NODE_AUTH_TOKEN
 # install server packages
 COPY .npmrc .npmrc
 ENV NODE_ENV="production"
-RUN npm set registry https://npm.pkg.github.com/@f0reacharr && npm i -g @f0reacharr/kit-timetable-server@${VERSION} && rm -f .npmrc
+RUN npm set registry https://npm.pkg.github.com/ && npm i -g @f0reacharr/kit-timetable-server@${VERSION} && rm -f .npmrc
 
 EXPOSE 3000
 
