Fix VSCode launch config for new package name

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
       "runtimeArgs": [
         "exec",
         "--scope",
-        "kit-timetable-server",
+        "@f0reacharr/kit-timetable-server",
         "--",
         "node"
       ],
