--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -27,14 +27,15 @@
   },
   "dependencies": {
     "@elastic/elasticsearch": "^7.9.0",
+    "@f0reacharr/kit-timetable-client": "^1.0.0",
+    "@f0reacharr/kit-timetable-schema": "^1.0.0",
     "apollo-server-express": "^2.17.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.3.0",
     "inversify": "^5.0.1",
-    "@f0reacharr/kit-timetable-client": "^1.0.0",
-    "@f0reacharr/kit-timetable-schema": "^1.0.0",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.26"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.17.8",
