--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -16,7 +16,8 @@
     "build:codegen": "gql-gen",
     "build:tsc": "tsc -p .",
     "build": "run-s build:*",
-    "start": "node ./dist/app.js"
+    "start": "node ./dist/app.js",
+    "typeorm": "node --require ts-node/register ../../node_modules/typeorm/cli.js"
   },
   "files": [
     "dist",
@@ -34,6 +35,7 @@
     "express": "^4.17.1",
     "graphql": "^15.3.0",
     "inversify": "^5.0.1",
+    "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.26"
   },
@@ -43,6 +45,7 @@
     "@graphql-codegen/typescript-resolvers": "1.13.0",
     "@types/express": "^4.17.8",
     "npm-run-all": "^4.1.5",
+    "ts-node": "^9.0.0",
     "typescript": "^3.9.7"
   }
 }
