--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -36,6 +36,7 @@
     "graphql": "^15.3.0",
     "inversify": "^5.0.1",
     "mysql": "^2.18.1",
+    "oauth": "^0.9.15",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.26"
   },
@@ -44,6 +45,7 @@
     "@graphql-codegen/typescript": "1.13.0",
     "@graphql-codegen/typescript-resolvers": "1.13.0",
     "@types/express": "^4.17.8",
+    "@types/oauth": "^0.9.1",
     "npm-run-all": "^4.1.5",
     "ts-node": "^9.0.0",
     "typescript": "^3.9.7"
