--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -31,6 +31,7 @@
     "@f0reacharr/kit-timetable-client": "^1.0.0",
     "@f0reacharr/kit-timetable-schema": "^1.0.0",
     "apollo-server-express": "^2.17.0",
+    "class-validator": "^0.12.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.3.0",
